* fix build script (SciJava Java 21 incompatible)